# rust-weather

./: Cargo.toml
src/: main.rs  model.rs  weather.rs
